--- a/readme
+++ b/readme
@@ -1,6 +1,6 @@
 Automated deploying iOS builds to TestFlight (http://testflightapp.com).
 
-Script written in bash. I'm not so good at it so please send your propositions and improvements.
+Script written in bash. Feel free to send me your propositions and improvements.
 Will be useful to launch right after your VCS commit or push.
 
 How to use
