--- a/readme
+++ b/readme
@@ -1,11 +1,14 @@
-Automated deploying iOS builds to TestFlight (http://testflightapp.com).
+###########################################################
+# Automated iOS project deploy script for TestFlightApp.com
+# https://github.com/mishakarpenko/testflightappdeploy
+# http://mishakarpenko.com
+###########################################################
 
 Script written in bash. Feel free to send me your propositions and improvements.
 Will be useful to launch right after your VCS commit or push.
 
 How to use
 ----------
-1. First edit config.sh file and enter your API tokens and stuff.
-2. Then create a symbolic link (ln -s source dest) for testflightappdeploy.sh script in your project directory (where is *.xcodeproj file located). Also add this link rights for execution (chmod +x file).
-3. Don't forget to put your *.mobileprovision file to the script directory.
-4. That's all, run ./link.sh from your project directory.
+1. First copy testflightappdeploy.sh file into your projects directory (near your *.xcodeproj file), and edit it entering your Apple Developer credentials, TestFlight API tokens and stuff.
+2. Make testflightappdeploy.sh executable: chmod +x testflightappdeploy.sh
+3. That's all, run ./testflightappdeploy.sh from your project directory.
